--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -17,6 +17,9 @@
                     <a href="/search" class="nav-link">Search</a>
                 </li>
                 <li class="nav-item px-2">
+                    <a href="/expenses/graph" class="nav-link">Expense Graph</a>
+                </li>
+                <li class="nav-item px-2">
                     <a href="/logs" class="nav-link">Logs</a>
                 </li>
                 <li class="nav-item px-2">
