--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,10 +4,17 @@
 		<title>{{title}}</title>
     	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 		<link rel="stylesheet" href="{{stylesheet}}">
+		<link rel="stylesheet" href="/public/css/dark-mode.css">
+		{{#if user}}
+		<script>
+			window.userTheme = {{#if user.theme}}"{{user.theme}}"{{else}}null{{/if}};
+		</script>
+		{{/if}}
 	</head>
 	<body>
 		{{{body}}}
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@4.5.1/dist/chart.umd.js"></script>
+		<script src="/public/js/theme-manager.js"></script>
 	</body>
 </html>
